--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,36 +12,55 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.26",
+    "expo-asset": "^12.0.11",
+    "expo-av": "^16.0.8",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.9",
+    "expo-gl": "~16.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
+    "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.9",
+    "expo-location": "~19.0.8",
     "expo-router": "~6.0.16",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
+    "expo-three": "^8.0.0",
+    "expo-video": "~3.0.15",
     "expo-web-browser": "~15.0.9",
+    "fflate": "^0.8.2",
+    "firebase": "^12.6.0",
+    "matter-js": "^0.20.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-game-engine": "^1.2.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-worklets": "0.5.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0"
+    "react-native-svg": "^15.15.1",
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1",
+    "three": "^0.181.2",
+    "three-stdlib": "^2.36.1"
   },
   "devDependencies": {
+    "@types/matter-js": "^0.20.2",
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
+    "@types/three": "^0.181.0",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
