--- a/mobile/package.json
+++ b/mobile/package.json
@@ -5,38 +5,39 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.26",
+    "expo": "~54.0.28",
     "expo-asset": "^12.0.11",
     "expo-av": "^16.0.8",
-    "expo-constants": "~18.0.10",
+    "expo-constants": "~18.0.11",
     "expo-dev-client": "~6.0.20",
-    "expo-font": "~14.0.9",
-    "expo-gl": "~16.0.8",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.10",
+    "expo-file-system": "~19.0.20",
+    "expo-font": "~14.0.10",
+    "expo-gl": "~16.0.9",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
     "expo-linear-gradient": "^15.0.8",
-    "expo-linking": "~8.0.9",
+    "expo-linking": "~8.0.10",
     "expo-location": "~19.0.8",
-    "expo-router": "~6.0.16",
-    "expo-splash-screen": "~31.0.11",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.8",
+    "expo-router": "~6.0.18",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
     "expo-three": "^8.0.0",
     "expo-video": "~3.0.15",
-    "expo-web-browser": "~15.0.9",
+    "expo-web-browser": "~15.0.10",
     "fflate": "^0.8.2",
     "firebase": "^12.6.0",
     "matter-js": "^0.20.0",
@@ -48,7 +49,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.1",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "three": "^0.181.2",
